<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="Emoji">
        <DropDownPreference
                android:key="@string/happy"
                android:title="@string/happypref"
                android:entries="@array/happy"
                app:useSimpleSummaryProvider="true"
                android:entryValues="@array/happy_filenames"
        />
        <DropDownPreference
                android:key="@string/sad"
                android:title="@string/sadpref"
                android:entries="@array/sad"
                app:useSimpleSummaryProvider="true"
                android:entryValues="@array/sad_filenames"
        />
        <DropDownPreference
                android:key="@string/surprised"
                android:title="@string/surprisedpref"
                android:entries="@array/sad"
                app:useSimpleSummaryProvider="true"
                android:entryValues="@array/sad_filenames"
        />
        <DropDownPreference
                android:key="@string/angry"
                android:title="@string/angrypref"
                android:entries="@array/angry"
                app:useSimpleSummaryProvider="true"
                android:entryValues="@array/angry_filenames"
        />
        <DropDownPreference
                android:key="@string/neutral"
                android:title="@string/neutralpref"
                android:entries="@array/neutral"
                app:useSimpleSummaryProvider="true"
                android:entryValues="@array/neutral_filenames"
        />
        <DropDownPreference
                android:key="@string/inpain"
                android:title="@string/inpainpref"
                android:entries="@array/inpain"
                app:useSimpleSummaryProvider="true"
                android:entryValues="@array/inpain_filenames"
        />
        <DropDownPreference
                android:key="@string/disgusted"
                android:title="@string/disgustedpref"
                android:entries="@array/disgusted"
                app:useSimpleSummaryProvider="true"
                android:entryValues="@array/disgusted_filenames"
        />
        <DropDownPreference
                android:key="@string/afraid"
                android:title="@string/afraidpref"
                android:entries="@array/afraid"
                app:useSimpleSummaryProvider="true"
                android:entryValues="@array/afraid_filenames"
        />
    </PreferenceCategory>
</PreferenceScreen>