<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/single"
                                                   tools:context=".SingleFeelingPage">
    <androidx.constraintlayout.widget.Guideline android:id="@+id/vertGuideline"
                                                android:layout_width="wrap_content"
                                                android:layout_height="match_parent"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline android:id="@+id/topHorGuideline"
                                                android:layout_width="wrap_content"
                                                android:layout_height="match_parent"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.1"/>


    <TextView
            android:id="@+id/feelingName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happy"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:id="@+id/audio"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:text="@string/audio"
            android:textColor="@color/black"
            android:backgroundTint="@color/button_color"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="60dp"
            android:paddingTop="25dp"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/vertGuideline" app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:id="@+id/text"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:text="@string/text"
            app:layout_constraintBottom_toBottomOf="@+id/audio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/audio"
            app:layout_constraintTop_toTopOf="@+id/audio"
            android:textColor="@color/black"
            android:backgroundTint="@color/button_color"
            android:paddingTop="25dp"
            android:paddingBottom="20dp"/>

    <ImageView
            android:id="@+id/emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="200dp"
            android:maxWidth="200dp"
            android:src="@drawable/happy"
            android:contentDescription="@string/emoji"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/feelingName"/>

    <Button
            android:text="@string/previous"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/prev"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/vertGuideline"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/topHorGuideline"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/black"
            android:textSize="20dp"/>
    <TextView
            android:text="@string/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/emoji" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="-20dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>