<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/main"
                                                   tools:context=".MainMenu">

    <TextView
            android:id="@+id/mainName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/mainName"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emoji" />

    <Button
            android:id="@+id/start"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/settings"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainName"
            android:textColor="@color/black"
            android:backgroundTint="#A9A9A9"
            android:paddingTop="25dp"
            android:paddingBottom="20dp"/>

    <Button
            android:id="@+id/settings"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:text="@string/settings"
            app:layout_constraintBottom_toBottomOf="@+id/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/start"
            app:layout_constraintTop_toTopOf="@+id/start"
            android:textColor="@color/black"
            android:backgroundTint="#A9A9A9"
            android:paddingTop="25dp"
            android:paddingBottom="20dp"
            />

    <ImageView
            android:id="@+id/emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="200dp"
            android:maxWidth="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/mainName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:src="@drawable/talk"
            android:contentDescription="@string/emoji"/>

</androidx.constraintlayout.widget.ConstraintLayout>