<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   tools:context=".MultipleFeelingPage">
    <androidx.constraintlayout.widget.Guideline android:id="@+id/vertGuideline"
                                                android:layout_width="wrap_content"
                                                android:layout_height="match_parent"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.5" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/botHorGuideline"
                                                android:layout_width="wrap_content"
                                                android:layout_height="match_parent"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.55" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/topHorGuideline"
                                                android:layout_width="wrap_content"
                                                android:layout_height="match_parent"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.1" />
    <Button
            android:text="@string/happy"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/topLeft"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/vertGuideline"
            app:layout_constraintBottom_toTopOf="@id/botHorGuideline"
            app:layout_constraintTop_toTopOf="@id/topHorGuideline"
            android:backgroundTint="#FFFF00"
            android:textColor="@color/black"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:tag="Happy"
            android:textSize="20dp"
    />
    <Button
            android:text="@string/angry"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/botLeft"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/vertGuideline"
            app:layout_constraintTop_toBottomOf="@id/botHorGuideline"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="#FF0000"
            android:textColor="@color/black"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:tag="Angry"
            android:textSize="20dp"
    />
    <Button
            android:text="@string/sad"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/topRight"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/vertGuideline"
            app:layout_constraintBottom_toTopOf="@id/botHorGuideline"
            app:layout_constraintTop_toTopOf="@id/topHorGuideline"
            android:backgroundTint="#1e90ff"
            android:textColor="@color/black"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:tag="Sad"
            android:textSize="20dp"
    />
    <Button
            android:text="@string/neutral"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/botRight"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/vertGuideline"
            app:layout_constraintTop_toBottomOf="@id/botHorGuideline"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="#e0e0e0"
            android:textColor="@color/black"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:tag="Neutral"
            android:textSize="20dp"
    />
    <!--Previous and Next Buttons-->
    <Button
            android:text="@string/previous"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/prev"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/vertGuideline"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/topHorGuideline"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textSize="20dp"
    />
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/next"
            app:layout_constraintBottom_toTopOf="@+id/topHorGuideline"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vertGuideline"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textSize="20dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>